--- a/NerdDinner.Web/wwwroot/views/about.html
+++ b/NerdDinner.Web/wwwroot/views/about.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-            <img class="nerd" src="/images/nerd.jpg" />
+            <img class="nerd" src="/images/NerdDinner.png" />
         </div>
         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
             <div class="pull-right">
